2011-03-21 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmacro.c: fixed bug, introduced 2011-03-20:
	  call dbuf_vprintf() instead dbuf_printf() in mvsprintf()

2011-03-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genRet): forgot the _endLazyDPSEvaluation
	* support/regression/compact-results.py: new, added
	* support/regression/Makefile.in: print test name and compact results after
	  running the test for better progress insight with make -j

2011-03-21 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCval.c, src/SDCCval.h, src/SDCCast.c: dbuf-ized

2011-03-20 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCicode.c, src/SDCCicode.h, src/SDCCsymt.c, src/SDCCsymt.h,
	  src/port.h, src/SDCCast.c, src/SDCCast.h, src/SDCCBBlock.c,
	  src/SDCCBBlock.h, src/z80/main.c, src/pic16/main.c:
	  dbuf-ized, get rid of global buffer, code cleaning
	* src/SDCCmacro.c, src/SDCCmain.c, support/Util/NewAlloc.c,
	  support/Util/newalloc.h: introduced Safe_strndup()

2011-03-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (movc, toCarry): replaced movc with toCarry,
	  (genNot, genSend, genRet): used toCarry,
	  (genAnd, genOr, genXor): fixed bug 3223041
	* src/mcs51/gen.c (toCarry): handle IS_OP_ACCUSE,
	  (genCmpEq, genAnd, genOr, genXor): fixed bug 3223041
	* support/regression/tests/bug3223041.c: new, added

2011-03-20 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCmacro.c, src/SDCCmacro.h, src/SDCCutil.c,
	  src/SDCCutil.h: dbuf-ized SDCCmacro.c
	* src/SDCCutil.c, src/SDCCutil.h, src/SDCCmain.c, src/ds390/main.c, src/z80/main.c:
	  dbuf-ized buildCmdLine(), moved to SDCCutil
	* src/SDCCbuild_cmd.[ch]: deleted

2011-03-19 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCutil.c, src/SDCCutil.h, src/SDCCmacro.c,
	  src/SDCCmacro.h:
	  fixed bug #3152525:
	  sdcc doesn't pass double-quotes from -D option to sdcpp
	* debugger/mcs51/simi.c:
	  call ioctl(sock, FIONBIO, &iMode)